chore: Move to trusted publishing

--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -22,7 +22,10 @@ permissions:
       - labeled
       - unlabeled
 jobs:
+  mint_rubygems_token:
+    uses: ./.github/workflows/rubygems_mint_token.yaml
   generate:
+    needs: mint_rubygems_token
     uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
     with:
       force: ${{ github.event.inputs.force }}
@@ -30,5 +33,5 @@ jobs:
       set_version: ${{ github.event.inputs.set_version }}
     secrets:
       github_access_token: ${{ secrets.GITHUB_TOKEN }}
-      rubygems_auth_token: ${{ secrets.RUBYGEMS_AUTH_TOKEN }}
+      rubygems_auth_token: ${{ needs.mint_rubygems_token.outputs.rubygems_token }}
       speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
