--- a/.github/workflows/rubygems_mint_token.yaml
+++ b/.github/workflows/rubygems_mint_token.yaml
@@ -20,8 +20,7 @@ jobs:
       - name: Export token for Speakeasy
         id: output-token
         run: |
-          printenv
           RUBYGEMS_OIDC="$RUBYGEMS_API_KEY"
-          echo "rubygems_oidc=$RUBYGEMS_OIDC" >> "$GITHUB_OUTPUT"
+          echo "rubygems_token=$RUBYGEMS_OIDC" >> "$GITHUB_OUTPUT"
     outputs:
       rubygems_token: ${{ steps.output-token.outputs.rubygems_token }}
