--- a/.github/workflows/rubygems_mint_token.yaml
+++ b/.github/workflows/rubygems_mint_token.yaml
@@ -21,6 +21,9 @@ jobs:
         id: output-token
         run: |
           RUBYGEMS_OIDC="$RUBYGEMS_API_KEY"
+          if [ -z "$RUBYGEMS_OIDC" ]; then
+            echo "var is empty"
+          fi
           echo "rubygems_token=$RUBYGEMS_OIDC" >> "$GITHUB_OUTPUT"
     outputs:
       rubygems_token: ${{ steps.output-token.outputs.rubygems_token }}
