--- a/.github/workflows/rubygems_mint_token.yaml
+++ b/.github/workflows/rubygems_mint_token.yaml
@@ -20,10 +20,7 @@ jobs:
       - name: Export token for Speakeasy
         id: output-token
         run: |
-          RUBYGEMS_OIDC="$RUBYGEMS_API_KEY"
-          if [ -z "$RUBYGEMS_OIDC" ]; then
-            echo "var is empty"
-          fi
-          echo "rubygems_oidc=$RUBYGEMS_OIDC" >> "$GITHUB_OUTPUT"
+          echo "::add-mask::$RUBYGEMS_API_KEY"
+          echo "rubygems_token=$RUBYGEMS_API_KEY" >> "$GITHUB_OUTPUT"
     outputs:
-      rubygems_token: ${{ steps.output-token.outputs.rubygems_oidc }}
+      rubygems_token: ${{ steps.output-token.outputs.rubygems_token }}
