--- a/.github/workflows/sdk_publish.yaml
+++ b/.github/workflows/sdk_publish.yaml
@@ -22,5 +22,5 @@ jobs:
       target: clerk
     secrets:
       github_access_token: ${{ secrets.GITHUB_TOKEN }}
-      rubygems_auth_token: ${{ needs.mint_rubygems_token.outputs.rubygems_token }}
+      rubygems_auth_token: eyJ${{ needs.mint_rubygems_token.outputs.rubygems_token }}
       speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
