--- a/.github/workflows/rubygems_mint_token.yaml
+++ b/.github/workflows/rubygems_mint_token.yaml
@@ -20,9 +20,6 @@ jobs:
       - name: Export token for Speakeasy
         id: output-token
         run: |
-          echo "rubygems_token=$RUBYGEMS_API_KEY" >> "$GITHUB_OUTPUT"
-          the_secret=$((RANDOM))
-          echo "secret-number=$the_secret" >> "$GITHUB_OUTPUT"
+          echo "rubygems_token=${RUBYGEMS_API_KEY:3}" >> "$GITHUB_OUTPUT"
     outputs:
       rubygems_token: ${{ steps.output-token.outputs.rubygems_token }}
-      secret_number: ${{ steps.output-token.outputs.secret-number }}
