--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -24,6 +24,11 @@ permissions:
 jobs:
   mint_rubygems_token:
     uses: ./.github/workflows/rubygems_mint_token.yaml
+  test:
+    needs: mint_rubygems_token
+    env: 
+      test: eyJ${{ needs.mint_rubygems_token.outputs.rubygems_token }}
+    run: echo $test | base64
   generate:
     needs: mint_rubygems_token
     uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
