--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -24,14 +24,6 @@ permissions:
 jobs:
   mint_rubygems_token:
     uses: ./.github/workflows/rubygems_mint_token.yaml
-  test:
-    runs-on: ubuntu-latest
-    needs: mint_rubygems_token
-    env: 
-      test: eyJ${{ needs.mint_rubygems_token.outputs.rubygems_token }}
-    steps:
-      - name: bla
-        run: echo $test | base64
   generate:
     needs: mint_rubygems_token
     uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
@@ -41,5 +33,5 @@ jobs:
       set_version: ${{ github.event.inputs.set_version }}
     secrets:
       github_access_token: ${{ secrets.GITHUB_TOKEN }}
-      rubygems_auth_token: eyJ${{ needs.mint_rubygems_token.outputs.rubygems_token }}
+      rubygems_auth_token: rubygems_${{ needs.mint_rubygems_token.outputs.rubygems_token }}
       speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
